lib/fixtures/errors/4021.ts
export const payload = {
  description: " Limit reached on key. Can apply to daily key limit or daily IP limit",
  url: "/v1/postcodes/UB6 9PR?api_key=<VALID_API_KEY>",
  query: {
    api_key: "<VALID_API_KEY>"
  },
  headers: {},
  httpStatus: 402,
  body: {
    code: 4021,
    message: "Lookup Limit Reached. For more information see http://ideal-postcodes.co.uk/documentation/response-codes#4021"
  }
};
